# ai_commit

./: AGENTS.md  Cargo.toml  README.md
src/: ai_commit.rs  cli.rs  config.rs  lib.rs  main.rs
