[package]
name = "ai_commit"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "3.0", features = ["cargo", "derive"] }
clap_complete = "3.2"
tempfile = "3.3"
toml = "0.9.10"
directories = "6.0.0"
